--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,7 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Compiler.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
+            //"console": "internalConsole",
             "console": "externalTerminal",
             "stopAtEntry": false
         },
