--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,5 @@
 {
-    "version": "0.2.0",
+//    "version": "0.2.0",
     "configurations": [
         {
             "name": ".NET Core Launch (console)",
@@ -9,8 +9,10 @@
             "program": "${workspaceFolder}/bin/Debug/netcoreapp3.1/Compiler.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
-            //"console": "internalConsole",
             "console": "externalTerminal",
+            /*
+            "console": "internalConsole",
+            */
             "stopAtEntry": false
         },
         {
